# qwen3-dbt-instruct

./: .gitignore  README.md
01_data_generation/: .env.example  CLAUDE.md  RALPH_LOOP_PROMPT.txt  README.md  generate_dbt_dag.py  generate_synthetic_data.py  pyproject.toml  review_dataset.py  select_queries.py  test_transform.py  transform_sql_to_dbt.py  transform_sql_to_dbt_pipeline.py  transform_sql_to_dbt_sonnet.py  validate_dbt_dag.py
01_data_generation/data/: dbt_dag_dataset_01.jsonl  dbt_dag_dataset_pipeline.jsonl  dbt_dag_dataset_sonnet.jsonl  finetune_dataset.jsonl  selected_queries.jsonl  selected_queries_v2.jsonl  validated_dataset_v2.jsonl
02_finetuning/: .env.example  README.md  evaluate_baseline.py  mistral_dbt_finetune.ipynb  prepare_dataset.py  pyproject.toml  qwen3_dbt_finetune.ipynb
02_finetuning/.agents/skills/hf-cli/: SKILL.md
02_finetuning/data/: eval.jsonl  train.jsonl
02_finetuning/results/: baseline.json
